<resources>
    <string name="app_name">MSRIT Events</string>

    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="loginBtn">Login</string>
    <string name="newAccount">No Account? Register!</string>

    <string name="register_name">Name</string>
    <string name="register_username">Username</string>
    <string name="register_phone">Phone</string>
    <string name="register_password">Password</string>
    <string name="registerBtn">Register</string>

    <string name="voise">Voise</string>
    <string name="edc">Edc</string>
    <string name="sports">Sports</string>
    <string name="c_activities">Cultural Activities</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_sign_out">Sign-Out</string>
    <string name="title_activity_admin_login">Sign in</string>
    <string name="msg_subscribed" />

    <string name="unsubscribe">Unsubscribe</string>
    <string name="subscribe">Subscribe</string>

    <string name="category">Choose a Category</string>
    <string name="submit">Submit</string>
    <string name="add_event">Add Event with Date and Time</string>

</resources>
