<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="events.example.tazeen.codesprint.Home">

    <Button
        android:id="@+id/voise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/voise" />

    <Button
        android:id="@+id/edc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/voise"
        android:layout_alignStart="@+id/voise"
        android:layout_below="@+id/voise"
        android:layout_marginTop="18dp"
        android:text="@string/edc" />

    <Button
        android:id="@+id/sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edc"
        android:layout_alignStart="@+id/edc"
        android:layout_below="@+id/edc"
        android:layout_marginTop="18dp"
        android:text="@string/sports" />

    <Button
        android:id="@+id/c_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sports"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/c_activities" />
</RelativeLayout>
