<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="events.example.tazeen.codesprint.Register">

    <EditText
        android:id="@+id/register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_name"
        android:layout_alignStart="@+id/register_name"
        android:layout_below="@+id/register_name"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:hint="@string/register_username"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_username"
        android:layout_alignStart="@+id/register_username"
        android:layout_below="@+id/register_username"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/register_phone"
        android:inputType="phone" />

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/registerBtn" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/register_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_phone"
        android:layout_alignStart="@+id/register_phone"
        android:layout_below="@+id/register_phone"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/register_password"
        android:inputType="textPassword" />
</RelativeLayout>
